--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div id="canvas"></div>
 
-<script src="js/mainScene3.js" type="module" defer></script>
+<script src="js/mainScene.js" type="module" defer></script>
 
 </body>
 </html>
