--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
     <title>ThreeJS Starter</title>
 </head>
 <body>
-    <canvas class="webgl"></canvas>
+<canvas class="webgl"></canvas>
+
+<div class="camera-control-info">
+    <h3>Управление камерой OrbitControls</h3>
+    <div class="mouse-buttons">
+
+        <p><b>Левая кнопка мыши</b> - двигаться вокруг центральной точки камеры.</p>
+        <p><b>Средняя кнопка мыши и скролл по ней</b> - регулирует масштаб камеры.</p>
+        <p><b>Правая кнопка мыши</b> - перемещает центральную точку камеры.</p>
+
+    </div>
+</div>
 </body>
 </html>
